News UAT/force-app/main/default/objects/Feature__c/Feature__c.object-meta.xml
<CustomObject>
    <description>Advertising &#39;Feature&#39; that is part of marketing Campaigns.</description>
    <label>Feature</label>
    <nameField>
        <label>Feature Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Features</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>