News UAT/force-app/main/default/objects/Feature__c/fields/Audience__c.field-meta.xml
<CustomField>
    <fullName>Audience__c</fullName>
    <label>Audience</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All men 25-54</fullName>
            </value>
            <value>
                <fullName>All people 25-54</fullName>
            </value>
            <value>
                <fullName>All women 25-54</fullName>
            </value>
            <value>
                <fullName>Baby Boomers</fullName>
            </value>
            <value>
                <fullName>Car Buyers</fullName>
            </value>
            <value>
                <fullName>Defence Force Recruitment</fullName>
            </value>
            <value>
                <fullName>Executive Influencers</fullName>
            </value>
            <value>
                <fullName>Family with children under 18</fullName>
            </value>
            <value>
                <fullName>Female empty nester 39-54</fullName>
            </value>
            <value>
                <fullName>Grocery Buying Mums</fullName>
            </value>
            <value>
                <fullName>Grocery Buying Mums with Kids 0-5 years</fullName>
            </value>
            <value>
                <fullName>Home Buyers</fullName>
            </value>
            <value>
                <fullName>Home owners</fullName>
            </value>
            <value>
                <fullName>Male Big Spenders</fullName>
            </value>
            <value>
                <fullName>Male grocery buyer 25-54</fullName>
            </value>
            <value>
                <fullName>Male sports enthusiast 25-54</fullName>
            </value>
            <value>
                <fullName>Over 65s</fullName>
            </value>
            <value>
                <fullName>Passive Job Seeker</fullName>
            </value>
            <value>
                <fullName>Rural</fullName>
            </value>
            <value>
                <fullName>Small Business Owners</fullName>
            </value>
            <value>
                <fullName>Social Grade A</fullName>
            </value>
            <value>
                <fullName>Tradie, 18-54</fullName>
            </value>
            <value>
                <fullName>Young Men 14-24</fullName>
            </value>
            <value>
                <fullName>Young people 18-24</fullName>
            </value>
            <value>
                <fullName>Young Women 25-38</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>