News UAT/force-app/main/default/objects/Feature__c/fields/Booking_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Booking_Deadline__c</fullName>
    <label>Booking Deadline</label>
    <type>DateTime</type>
</CustomField>