News UAT/force-app/main/default/objects/Feature__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <inlineHelpText>Person to query regarding the Feature</inlineHelpText>
    <label>Feature Contact Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>