News UAT/force-app/main/default/objects/Feature__c/fields/Feature_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Feature_Close_Date__c</fullName>
    <description>Determine the date the Feature should be set to Closed</description>
    <formula>IF(ISBLANK(Feature_End_Date__c), Feature_Date__c, Feature_End_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Feature Close Date</label>
    <type>Date</type>
</CustomField>