News UAT/force-app/main/default/objects/Feature__c/fields/Feature_Date__c.field-meta.xml
<CustomField>
    <fullName>Feature_Date__c</fullName>
    <label>Feature Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>