News UAT/force-app/main/default/objects/Feature__c/fields/Feature_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Feature_End_Date__c</fullName>
    <label>Feature End Date (optional)</label>
    <type>Date</type>
</CustomField>