News UAT/force-app/main/default/objects/Feature__c/fields/Last_Year_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_Revenue__c</fullName>
    <label>Last Year Revenue</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>