News UAT/force-app/main/default/objects/Feature__c/fields/Material_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Material_Deadline__c</fullName>
    <label>Material Deadline</label>
    <type>DateTime</type>
</CustomField>