News UAT/force-app/main/default/objects/Feature__c/fields/Number_of_Pages__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Pages__c</fullName>
    <label>Number of Pages</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>