News UAT/force-app/main/default/objects/Feature__c/fields/Parent_Feature__c.field-meta.xml
<CustomField>
    <fullName>Parent_Feature__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Feature</label>
    <referenceTo>Feature__c</referenceTo>
    <relationshipLabel>Features</relationshipLabel>
    <relationshipName>Features</relationshipName>
    <type>Lookup</type>
</CustomField>