News UAT/force-app/main/default/objects/Feature__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Adelaide Matters</fullName>
            </value>
            <value>
                <fullName>AdelaideNow</fullName>
            </value>
            <value>
                <fullName>advertiser.com.au</fullName>
            </value>
            <value>
                <fullName>Advocate</fullName>
            </value>
            <value>
                <fullName>Albert and Logan News - Fri</fullName>
            </value>
            <value>
                <fullName>Albert and Logan News - Wed</fullName>
            </value>
            <value>
                <fullName>Australian Golf Digest</fullName>
            </value>
            <value>
                <fullName>Ayr Advocate</fullName>
            </value>
            <value>
                <fullName>Bayside Leader</fullName>
            </value>
            <value>
                <fullName>Bayside Star</fullName>
            </value>
            <value>
                <fullName>Berwick Leader</fullName>
            </value>
            <value>
                <fullName>Best Recipes</fullName>
            </value>
            <value>
                <fullName>Best Weekend Magazine</fullName>
            </value>
            <value>
                <fullName>Big League</fullName>
            </value>
            <value>
                <fullName>birth.com.au</fullName>
            </value>
            <value>
                <fullName>Blacktown Advocate</fullName>
            </value>
            <value>
                <fullName>Body+Soul</fullName>
            </value>
            <value>
                <fullName>Bowen Independent</fullName>
            </value>
            <value>
                <fullName>Bribie Weekly</fullName>
            </value>
            <value>
                <fullName>Brimbank Leader</fullName>
            </value>
            <value>
                <fullName>Brisbane News</fullName>
            </value>
            <value>
                <fullName>Business Spectator</fullName>
            </value>
            <value>
                <fullName>Caboolture News</fullName>
            </value>
            <value>
                <fullName>Caboolture Shire Herald</fullName>
            </value>
            <value>
                <fullName>cairns.com.au</fullName>
            </value>
            <value>
                <fullName>Cairns Post</fullName>
            </value>
            <value>
                <fullName>Cairns Sun</fullName>
            </value>
            <value>
                <fullName>Canning Times</fullName>
            </value>
            <value>
                <fullName>Canterbury Bankstown Express</fullName>
            </value>
            <value>
                <fullName>Canvas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>