News UAT/force-app/main/default/objects/Feature__c/fields/Section_in_Product__c.field-meta.xml
<CustomField>
    <fullName>Section_in_Product__c</fullName>
    <label>Section in Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Arts</fullName>
            </value>
            <value>
                <fullName>Big Wheels</fullName>
            </value>
            <value>
                <fullName>Body + Soul</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Career One</fullName>
            </value>
            <value>
                <fullName>CARSguide</fullName>
            </value>
            <value>
                <fullName>CM2</fullName>
            </value>
            <value>
                <fullName>Coastal &amp; Country Property</fullName>
            </value>
            <value>
                <fullName>Commercial Property</fullName>
            </value>
            <value>
                <fullName>Confidential</fullName>
            </value>
            <value>
                <fullName>Dealer</fullName>
            </value>
            <value>
                <fullName>Developments</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Entertainment</fullName>
            </value>
            <value>
                <fullName>Escape</fullName>
            </value>
            <value>
                <fullName>Fashion</fullName>
            </value>
            <value>
                <fullName>Filler</fullName>
            </value>
            <value>
                <fullName>Food &amp; Wine</fullName>
            </value>
            <value>
                <fullName>Footy Central</fullName>
            </value>
            <value>
                <fullName>Form Guide</fullName>
            </value>
            <value>
                <fullName>General News</fullName>
            </value>
            <value>
                <fullName>Goss &amp; Glam</fullName>
            </value>
            <value>
                <fullName>Health &amp; Beauty</fullName>
            </value>
            <value>
                <fullName>HiT</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Insider</fullName>
            </value>
            <value>
                <fullName>Lifestyle</fullName>
            </value>
            <value>
                <fullName>Manufacture</fullName>
            </value>
            <value>
                <fullName>MegaWrap</fullName>
            </value>
            <value>
                <fullName>moneysaverHQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>