News UAT/force-app/main/default/objects/Feature__c/fields/System_Classification_Section__c.field-meta.xml
<CustomField>
    <fullName>System_Classification_Section__c</fullName>
    <label>System Classification/Section</label>
    <length>255</length>
    <type>Text</type>
</CustomField>