News UAT/force-app/main/default/objects/Feature__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Multiple</fullName>
                <default>true</default>
                <label>Multiple</label>
            </value>
            <value>
                <fullName>App - Mobile</fullName>
            </value>
            <value>
                <fullName>App - Tablet</fullName>
            </value>
            <value>
                <fullName>Cross-platform</fullName>
            </value>
            <value>
                <fullName>Editorial - Local</fullName>
            </value>
            <value>
                <fullName>Editorial - Metro</fullName>
            </value>
            <value>
                <fullName>Editorial - Regional</fullName>
            </value>
            <value>
                <fullName>Magazine</fullName>
            </value>
            <value>
                <fullName>Marketing - Partnerships</fullName>
            </value>
            <value>
                <fullName>Marketing - Promotions</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Newspaper - Local</fullName>
            </value>
            <value>
                <fullName>Newspaper - Metro</fullName>
            </value>
            <value>
                <fullName>Newspaper - Regional</fullName>
            </value>
            <value>
                <fullName>Tablet</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>