News UAT/force-app/main/default/objects/Feature__c/validationRules/Feature_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Feature_End_Date</fullName>
    <active>true</active>
    <description>Cannot be before Start Date</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Feature_End_Date__c)), Feature_Date__c &gt; Feature_End_Date__c)</errorConditionFormula>
    <errorDisplayField>Feature_End_Date__c</errorDisplayField>
    <errorMessage>The Feature&#39;s End date must be the same or after the Start Date</errorMessage>
</ValidationRule>