News UAT/force-app/main/default/objects/Feature__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Feature_Date__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Product__c</columns>
    <columns>Category__c</columns>
    <columns>Material_Deadline__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>State__c</field>
        <operation>equals</operation>
        <value>VIC</value>
    </filters>
    <label>All</label>
</ListView>