News UAT/force-app/main/default/objects/Feature__c/listViews/cns.listView-meta.xml
<ListView>
    <fullName>cns</fullName>
    <columns>NAME</columns>
    <columns>Feature_Close_Date__c</columns>
    <columns>Feature_Date__c</columns>
    <columns>Booking_Deadline__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>CNS</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>On Hold,Available,Under Review / Sold</value>
    </filters>
    <label>CNS</label>
</ListView>